--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/node-logger": "^6.0.26",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.26",
+    "@storybook/storybook-deployer": "^2.8.7",
     "babel-loader": "^8.1.0",
     "react-is": "^16.13.1"
   }
